# scavenger

./: .gitignore  Dockerfile  Pipfile  README.md  config.js  dev-run  flake.nix  index.js  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  shell.nix
config/: uwsgi.conf
core/: admin.py  context_processors.py  forms.py  models.py  tasks.py  urls.py
docker/: local_settings.py
lib/: db.js
scavenger2022/: Pipfile  base.css  db.sqlite3  flake.nix  manage.py  pyproject.toml  requirements.txt  result  shell.nix
scavenger2022/core/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
scavenger2022/core/api/: urls.py
scavenger2022/core/api/views/: codes.py
scavenger2022/core/fixtures/: qrcodes.json
scavenger2022/core/locale/en_CA/LC_MESSAGES/: django.po
scavenger2022/core/locale/ja_JP/LC_MESSAGES/: django.mo  django.po
scavenger2022/core/migrations/: 0001_initial.py  0002_alter_qrcode_notes.py  0002_user_metropolis_id_user_refresh_token.py  0003_alter_hint_id.py  0004_alter_qrcode_id.py  0004_qrcode_short_alter_invite_code.py  0005_alter_hint_hint_alter_qrcode_location_and_more.py  0006_team.py  0007_invite.py  0008_alter_invite_code_alter_qrcode_key_alter_team_name.py  0008_alter_team_id_alter_team_name.py  0009_remove_qrcode_users_team_current_qr_code_and_more.py  0010_alter_hint_hint.py  0010_rename_current_qr_code_team_completed_qr_codes.py  0011_alter_hint_options.py  0011_team_current_qr_code_remove_team_completed_qr_codes_and_more.py  0012_alter_team_completed_qr_codes.py  0013_remove_team_completed_qr_codes_and_more.py  0015_alter_hint_options_alter_invite_team.py  0017_alter_user_team.py  0018_qrcode_image_url.py
scavenger2022/core/static/core/: base.css  countdown.js  index.css  logic_hints.css  qr.css  qr.js
scavenger2022/core/templates/core/: base.html  credits.html  gate.html  index.html  logic_hints.html  logout.html  qr.html  team_invite.html  team_join.html  team_new.html  team_recruit.html
scavenger2022/core/templatetags/: md.py  qr.py
scavenger2022/core/views/: auth.py  index.py  qr.py  team.py
scavenger2022/scavenger2022/: asgi.py  local_settings.py  settings.py  wsgi.py
static/: index.html
(+92 files in other folders)
