[tool.poetry]
name = "wlmac-scavenger"
version = "1.0.0"
description = "Ephemeral SAC Scavenger Hunt website by Project Metropolis"
authors = ["nyiyui <+@nyiyui.ca>",  "Jason Cameron <jasoncameron.all@gmail.com>",]

[tool.poetry.dependencies]
python = "^3.8"
Django = "<4.2"
Authlib = "^1.2.0"
requests = "^2.28.1"
fontawesomefree = "^6.2.1"
mistune = "^3.0.2"
django-ckeditor = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "wlmac-scavenger.settings"
