[tool.poetry]
name = "scavenger2022"
version = "0.1.0"
description = ""
authors = ["nyiyui <+@nyiyui.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
Authlib = "^1.2.0"
requests = "^2.28.1"
fontawesomefree = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "scavenger2022.settings"
